# AdasPerception

./: .gitignore  LICENSE  README.md
CPP/configs/: extrinsics.txt  intrinsics.txt
CPP/perception/: CMakeLists.txt  main.cpp
CPP/perception/common/: data_camera.h  data_common.h  data_lane.h  data_obstacle.h
CPP/perception/ego/: ego_vehicle.cpp  ego_vehicle.h
CPP/perception/files/: protobuf_reader.h  protobuf_writer.h  read_files.cpp  read_files.h  transform.pb.cc  transform.pb.h  transform.proto
CPP/perception/interface/: interface.cpp  interface.h
CPP/perception/lanes/: lane.cpp  lane.h  line.cpp  line.h  road.h
CPP/perception/obstacles/: obstacle.cpp  obstacle.h  track.cpp  track.h  track_list.cpp  track_list.h
CPP/perception/process/: process.h
CPP/perception/sensors/: camera.cpp  camera.h
Python/: requirements.txt
Python/configs/: camera.json  cfg.yaml
Python/src/ego/: ego_vehicle.py
Python/src/interface/: plot_bev.py  plot_predicts.py
Python/src/process/: __init__.py  process.py  process_lane.py
Python/src/sensors/: camera copy.py  camera.py
Python/src/targets/lanes/: line.py
Python/src/targets/obstacles/: __init__.py  obstacle.py  pedenstrain.py  track.py  track_list.py  vehicle.py
Python/src/utils/: io_funcs.py
Python/test/: camera_test.py  obstacle_test.py
Python/tools/: main.py
